test: ArchUnit enforcement + integration tests for BFF and Business Service
Business Service:
- ArchUnit: domain has ZERO Spring/Jakarta imports (enforced on every build)
- ArchUnit: jakarta.validation forbidden in ..domain.. (Bean Validation is an adapter concern)
- ArchUnit: no oauth2-client imports (resource server only)
- ArchUnit: @Transactional forbidden on controllers, controllers depend on infrastructure.service
- ArchUnit naming rules: *Controller / *DomainService / *ApplicationService / *RepositoryAdapter / *JpaEntity, Command/Query records
- Integration: jwt() post-processor for auth (no Keycloak container needed)
- ValidationAndErrorsIntegrationTest: full RFC 9457 envelope coverage
  (400 syntactic via @Valid, 422 semantic via ValidationFailureException,
  404/409/428 with registry type URIs; asserts populated type/instance/Content-Language)
- InternalErrorIntegrationTest: 500 fallback wraps unhandled exceptions, no stack trace leaked
- UserSyncFromJwtTest: AppUser upserted from JWT claims, no duplicate row on second request
- DevModeTest: dev profile permits all, dummy user auto-created, audit row references dummy
- SemanticValidator: real "FORBIDDEN"-name rule so the 422 pipeline has a deterministic trigger
  (covered by both SemanticValidatorTest unit test and the 422 integration test)
- BoatRepositoryAdapter.save: switched to saveAndFlush so the merged entity carries the
  bumped @Version BEFORE we map back to the immutable domain record — the PUT response
  ETag now reflects the persisted version, fixing a real client-facing inconsistency
  surfaced by BoatControllerIntegrationTest

BFF:
- ArchUnit: no JPA imports, no @Transactional, controller-must-go-through-service chain
- ArchUnit: BusinessServiceClient must be interface (HTTP Interface), services suffixed *BffService
- Integration: WireMock standalone (shaded jar, avoids Jetty transitive conflict),
  oauth2Login() post-processor for session auth
- BffShortCircuitIntegrationTest: BFF's own @Vali